<resources>
    <string name="app_name" translatable="false">HelpLogic</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>

    <!-- Botões do navigation drawer-->
    <string name="menu_home">Voltar para o ínicio</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_editar_perfil">Editar perfil</string>
    <string name="menu_configuracoes">Configurações</string>

    <string name="alterar_foto">Alterar Foto</string>

    <string name="name">Nome </string>
    <string name="email">Email </string>
    <string name="lipsum_01p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ultricies elit sed ex mattis aliquet. Phasellus vehicula leo at ex aliquet, sed finibus sem ultricies. Mauris eros turpis, laoreet sit amet nulla vitae, egestas lobortis lorem. Nullam tortor justo, ornare congue purus a, vehicula consectetur ex. Fusce vel ante condimentum enim vestibulum porttitor. Etiam leo dolor, porta vel pellentesque sed, bibendum aliquet quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus gravida, mauris vitae vulputate fermentum, elit erat varius quam, dictum rhoncus nunc urna sit amet sem. Vivamus vestibulum velit ante, et faucibus elit mattis vitae. Duis volutpat leo id ligula tempor, ac lacinia dui finibus. Quisque eget tempor nibh, vitae auctor odio. Sed elementum augue vel ultrices tempus. Donec tempus luctus felis, lacinia molestie arcu. Nulla quis metus dolor.</string>
    <string name="titulo_da_questao">Titulo da Questao</string>
    <string name="estat_stica">Estatística</string>
    <string name="favorito">Favorito</string>
    <string name="exercicios_favoritos">Exercícios Favoritos</string>
    <string name="titulo_do_conteudo">Título do Conteúdo</string>


</resources>
