<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_sobre"
            android:icon= "@drawable/ic_help_white"
            android:title="@string/menu_sobre" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/ic_favorite_border_white"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_person_outline_white"
            android:title="@string/menu_editar_perfil" />

        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_settings_white"
            android:title="@string/menu_configuracoes" />
    </group>
</menu>
