<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PerfilActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/padrao"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/alterar_foto"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                    app:layout_constraintStart_toStartOf="@+id/imageProfile"
                    app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

            </android.support.constraint.ConstraintLayout>

            <EditText
                android:id="@+id/editar_nome"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@android:color/black"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editar_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@android:color/black"
                tools:targetApi="o" />


            <RadioGroup
                android:id="@+id/sexGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sexo"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioMasc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:buttonTint="@color/colorAccent"
                    android:text="Masculino"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioFem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:buttonTint="@color/colorAccent"
                    android:text="Feminino"
                    android:textSize="18sp" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="165dp"
        android:layout_marginEnd="165dp"
        android:indeterminate="true"
        android:visibility="gone"/>


</RelativeLayout>



